# imguiXmlOop

./: AppData.h  CMakeLists.txt  CityDataPanelBuilder.cpp  CityDataPanelBuilder.h  Panel.cpp  Panel.h  README-xml.md  README.md  UiBuilder.h  Widget.cpp  Widget.h  XmlParser.cpp  XmlParser.h  builder_main.cpp  city_data_data.xml  city_data_panel.xml  contact_panel.xml  main.cpp  setup.sh  win-setup.sh  yoga-builder.md
